--- a/leoapp/src/index.css
+++ b/leoapp/src/index.css
@@ -62,3 +62,9 @@ code {
 .ant-carousel .slick-slide h3 {
   color: #fff;
 }
+
+
+div .imgcontainer img {
+  max-width: 100%;
+  max-height: 100%;
+}
