--- a/leoapp/src/index.css
+++ b/leoapp/src/index.css
@@ -68,3 +68,9 @@ div .imgcontainer img {
   max-width: 100%;
   max-height: 100%;
 }
+
+
+:global(.ant-btn-primary:active) {
+  background-color: #FF8F00 !important;
+  border-color: #FF8F00 !important;
+}
