--- a/leoapp/src/index.css
+++ b/leoapp/src/index.css
@@ -56,3 +56,7 @@ div .imgcontainer img {
   background-color: #FF8F00 !important;
   border-color: #FF8F00 !important;
 }
+
+.btn-margin {
+  margin: 7px 3px;
+}
